# WebScraper

./: book_scrape.py  email.py  image_scrape.py  main.py  pyproject.toml  quote_scrape.py
